# today.do

./: .prettierrc.json  README.md  capacitor.config.ts  eslint.config.mjs  jest.config.ts  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: continuous-integration.yaml
docs/: 404.html  index.html
docs/404/: index.html
docs/500/: index.html
docs/_next/data/1kHdRq41YrOnBpVbLTdDS/: version.json
docs/_next/data/CyKIZNTDArDO9tGSeH-sz/: version.json
docs/_next/data/HIuT-NOz7dCckMRR8yR6U/: version.json
docs/_next/data/IQ5rwazOF3xOy83490f32/: version.json
docs/_next/data/OGBqHDDCKhKotGHhJmhL8/: version.json
docs/_next/data/VPxe67sUTe2DL41DNB4XT/: version.json
docs/_next/data/n3yTzojIUngMQNkTq04T0/: version.json
docs/_next/data/skaPEYoUR41HAi5kl4WCR/: version.json
docs/_next/data/wetgo2DyN6AspKXorIQe0/: version.json
docs/_next/data/xg7TwZVZWgqiqc6IPQhlM/: version.json
docs/_next/data/ynbvYRVteloslMQAqYMce/: version.json
docs/_next/static/-AgZPJZUO0vUl7gaUPzTv/: _buildManifest.js
docs/_next/static/-Tn4BdheEuqsMup_4acW5/: _buildManifest.js
docs/_next/static/9dVgC2K9eZbvTmnyLW1hF/: _buildManifest.js
docs/_next/static/BoxkCY7EWGH2F6olah7cT/: _buildManifest.js
docs/app/: index.html
docs/version/: index.html
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
mobile/ios/App/: Podfile
src-tauri/: Cargo.toml  tauri.conf.json
src/hooks/: useIndexedDB.ts
src/pages/: _app.tsx  _document.tsx  index.tsx
src/routes/Home/: Home.tsx
src/styles/: globals.css
(+382 files in other folders)
